--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "bootstrap": "^5.3.3",
     "braintree-web-drop-in-react": "^1.2.1",
     "google-fonts": "^1.0.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.13",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
